--- a/_config.yml
+++ b/_config.yml
@@ -7,10 +7,10 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Johannes's Homepage"
+title                    : "Johannes Hollenbach"
 title_separator          : "-"
 name                     : &name "Johannes Hollenbach"
-description              : &description "personal description"
+description              : #&description "personal description"
 url                      : https://s3joholl.github.io/johanneshollenbach.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "s3joholl/johanneshollenbach.github.io"
