--- a/_config.yml
+++ b/_config.yml
@@ -11,11 +11,12 @@ title                    : "Johannes Hollenbach"
 title_separator          : "-"
 name                     : &name "Johannes Hollenbach"
 description              : #&description "personal description"
-url                      : https://s3joholl.github.io/johanneshollenbach.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://s3joholl.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "s3joholl/johanneshollenbach.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
+seo_description          : "Site for Johannes Hollenbach, researcher and PhD student at RWI - Leibniz-Institute for Economic Resarch in Essen"
 words_per_minute         : 160
 future                   : true
 read_more                : "disabled" # if enabled, adds "Read more" links to excerpts
