--- a/_config.yml
+++ b/_config.yml
@@ -83,9 +83,9 @@ analytics:
 author:
   name             : "Johannes Hollenbach"
   avatar           : "profile.png"
-  bio              : "Researcher & Econ PhD Student"
+  bio              : "Researcher & doctoral Student at <a style='color: black;' href='https://www.rwi-essen.de'>RWI - Leibniz-Institute for Economic Research</a>"
   location         : "Essen, Germany"
-  employer         : "RWI - Leibniz-Institute for Economic Research"
+  employer         : 
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=hasnrIwAAAAJ&hl=en"
   email            :
