--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 # Site Author
 author:
   name             : "Johannes Hollenbach"
-  avatar           : "profile.png"
+  avatar           : "profile_picture.jpg"
   bio              : "Researcher & doctoral student at <a style='color: black;' href='https://www.rwi-essen.de' target='_blank' >RWI - Leibniz-Institute for Economic Research</a>"
   location         : "Essen, Germany"
   employer         : 
