--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Johannes Hollenbach"
 title_separator          : "-"
 name                     : &name "Johannes Hollenbach"
 description              : #&description "personal description"
-url                      : https://s3joholl.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://johanneshollenbach.com # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "s3joholl/johanneshollenbach.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
