--- a/_config.yml
+++ b/_config.yml
@@ -51,7 +51,7 @@ atom_feed:
   path                   : # blank (default) uses feed.xml
 
 # SEO Related
-google_site_verification :
+google_site_verification : 4WrisD4B8UKCyrbbTHSndrSxzeT3IOmCvYBzN9YxFQM"
 bing_site_verification   :
 alexa_site_verification  :
 yandex_site_verification :
