--- a/_config.yml
+++ b/_config.yml
@@ -16,17 +16,17 @@ baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "s3joholl/johanneshollenbach.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
-seo_description          : "Site for Johannes Hollenbach, researcher and PhD student at RWI - Leibniz-Institute for Economic Resarch in Essen"
+seo_description          : "Site for Johannes Hollenbach, researcher and PhD student at RWI - Leibniz-Institute for Economic Resarch in Essen, Germany"
 words_per_minute         : 160
 future                   : true
 read_more                : "disabled" # if enabled, adds "Read more" links to excerpts
-talkmap_link             : false #change to true to add link to talkmap on talks page
+talkmap_link             : false 
 comments:
   provider               : # false (default), "disqus", "discourse", "facebook", "google-plus", "staticman", "custom"
   disqus:
     shortname            :
   discourse:
-    server               : # https://meta.discourse.org/t/embedding-discourse-comments-via-javascript/31963 , e.g.: meta.discourse.org
+    server               : 
   facebook:
     appid                :
     num_posts            : # 5 (default)
@@ -86,10 +86,10 @@ author:
   bio              : "Researcher & doctoral student at <a style='color: black;' href='https://www.rwi-essen.de' target='_blank' >RWI - Leibniz-Institute for Economic Research</a>"
   location         : "Essen, Germany"
   employer         : 
-  pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=hasnrIwAAAAJ&hl=en"
   email            :  johannes.hollenbach@rwi-essen.de
-  researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
+  researchgate     :  
   uri              :
   bitbucket        :
   codepen          :
@@ -101,16 +101,16 @@ author:
   google_plus      :
   keybase          :
   instagram        :
-  impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
+  impactstory      : 
   lastfm           :
   linkedin         : "johannes-hollenbach"
   orcid            : "https://orcid.org/0009-0006-2008-0564"
   pinterest        :
   soundcloud       :
-  stackoverflow    : # http://stackoverflow.com/users/123456/username
+  stackoverflow    : 
   steam            :
   tumblr           :
-  twitter          : #"replacethistwitterhandle"
+  twitter          : 
   vine             :
   weibo            :
   xing             :
