--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "s3joholl/johanneshollenbach.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
-seo_description          : "Site for Johannes Hollenbach, researcher and PhD student at RWI - Leibniz-Institute for Economic Resarch in Essen, Germany"
+seo_description          : "Site for Johannes Hollenbach, researcher and PhD student at Paderborn University and RWI - Leibniz-Institute for Economic Resarch in Essen, Germany"
 words_per_minute         : 160
 future                   : true
 read_more                : "disabled" # if enabled, adds "Read more" links to excerpts
@@ -83,7 +83,7 @@ analytics:
 author:
   name             : "Johannes Hollenbach"
   avatar           : "profile_picture.jpg"
-  bio              : "Researcher & doctoral student at <a style='color: black;' href='https://www.rwi-essen.de' target='_blank' >RWI - Leibniz-Institute for Economic Research</a>"
+  bio              : "Researcher & Ph.D. candidate at <a href='https://wiwi.uni-paderborn.de/en/' target='_blank'>UPB</a> & <a href='https://www.rwi-essen.de' target='_blank' >RWI</a>"
   location         : "Essen, Germany"
   employer         : 
   pubmed           : 
