--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ analytics:
 author:
   name             : "Johannes Hollenbach"
   avatar           : "profile_picture.jpg"
-  bio              : "Researcher & Ph.D. candidate at <a href='https://wiwi.uni-paderborn.de/en/' target='_blank'>UPB</a> & <a href='https://www.rwi-essen.de' target='_blank' >RWI</a>"
+  bio              : "Researcher & Ph.D. candidate at <a href='https://wiwi.uni-paderborn.de/en/' target='_blank'>UPB</a> & <a href='https://www.rwi-essen.de/en' target='_blank' >RWI</a>"
   location         : "Essen, Germany"
   employer         : 
   pubmed           : 
