--- a/_config.yml
+++ b/_config.yml
@@ -97,7 +97,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "s3joholl"
+  github           : 
   google_plus      :
   keybase          :
   instagram        :
