--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -21,5 +21,5 @@ main:
   #- title: "Guide"
   #  url: /markdown/
 
-  #- title: "Teaching"
-  # url: /teaching/
+  - title: "Teaching"
+    url: /teaching/
